Archive2/8b/6c997ed27afcff/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of 'void foo(Args&& ...) [with Args = {}]':
main.cpp:18:9:   required from here
main.cpp:9:38: error: no matching function for call to 'forward()'
     bar(std::forward<Args...>(args...));   // variant 2
                                      ^
main.cpp:9:38: note: candidates are:
In file included from /usr/local/include/c++/4.9.2/bits/stl_pair.h:59:0,
                 from /usr/local/include/c++/4.9.2/utility:70,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/move.h:76:5: note: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&)
     forward(typename std::remove_reference<_Tp>::type& __t) noexcept
     ^
/usr/local/include/c++/4.9.2/bits/move.h:76:5: note:   template argument deduction/substitution failed:
main.cpp:9:38: note:   candidate expects 1 argument, 0 provided
     bar(std::forward<Args...>(args...));   // variant 2
                                      ^
In file included from /usr/local/include/c++/4.9.2/bits/stl_pair.h:59:0,
                 from /usr/local/include/c++/4.9.2/utility:70,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/move.h:87:5: note: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&&)
     forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
     ^
/usr/local/include/c++/4.9.2/bits/move.h:87:5: note:   template argument deduction/substitution failed:
main.cpp:9:38: note:   candidate expects 1 argument, 0 provided
     bar(std::forward<Args...>(args...));   // variant 2
                                      ^
+ clang++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:9:9: error: no matching function for call to 'forward'
    bar(std::forward<Args...>(args...));   // variant 2
        ^~~~~~~~~~~~~~~~~~~~~
main.cpp:18:5: note: in instantiation of function template specialization 'foo<>' requested here
    foo();
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/move.h:76:5: note: candidate function template not viable: requires single argument '__t', but no arguments were provided
    forward(typename std::remove_reference<_Tp>::type& __t) noexcept
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/move.h:87:5: note: candidate function template not viable: requires single argument '__t', but no arguments were provided
    forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
    ^
1 error generated.
